<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tatsme.afb.myandroidfinalproject.MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textAllCaps="true"
            android:textSize="14pt"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingBottom="15dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:id="@+id/displayMenuTable">

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/header1"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/header2"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/header3"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:paddingBottom="2dp"/>
            </TableRow>

            <TableRow android:id="@+id/rowBoiledEggs"
                android:clickable="true"
                android:onClick="clickBoiledEggs">
                <ImageView
                    android:layout_width="120dp"
                    android:src="@drawable/boiledegg"
                    android:contentDescription="@string/pic1"
                    android:id="@+id/imgboiledeggs"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style1"
                    android:textAlignment="center"
                    android:id="@+id/txtBoiled" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level1"
                    android:textAlignment="center"
                    android:id="@+id/txtSuperEasy" />

            </TableRow>

            <TableRow>
                <TextView
                    android:paddingBottom="2dp"/>
            </TableRow>

            <TableRow android:id="@+id/rowPoachedEggs"
                android:clickable="true"
                android:onClick="clickPoachedEggs">
                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/poachedegg"
                    android:scaleType="center"
                    android:contentDescription="@string/pic2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style2"
                    android:textAlignment="center"
                    android:id="@+id/txtPoachedEggs" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level2"
                    android:textAlignment="center"
                    android:id="@+id/txtEasy" />

            </TableRow>

            <TableRow>
                <TextView
                    android:paddingBottom="2dp"/>
            </TableRow>

            <TableRow android:id="@+id/rowBullsEye"
                android:clickable="true"
                android:onClick="clickBullsEye">
                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/bullseyeegg"
                    android:scaleType="center"
                    android:contentDescription="@string/pic3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style3"
                    android:textAlignment="center"
                    android:id="@+id/txtBullsEye" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level3"
                    android:textAlignment="center"
                    android:id="@+id/txtMediumDifficult" />

            </TableRow>


            <TableRow>
                <TextView
                    android:paddingBottom="2dp"/>
            </TableRow>

            <TableRow android:id="@+id/rowScrambledEggs"
                android:clickable="true"
                android:onClick="clickScrambledEggs">
                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/scrambledeggs"
                    android:scaleType="center"
                    android:contentDescription="@string/pic4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style4"
                    android:textAlignment="center"
                    android:id="@+id/txtScrambled" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level4"
                    android:textAlignment="center"
                    android:id="@+id/txtDifficult" />

            </TableRow>

            <TableRow>
                <TextView
                    android:paddingBottom="2dp"/>
            </TableRow>

            <TableRow android:id="@+id/rowOmelette"
                android:clickable="true"
                android:onClick="clickOmelette">
                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/omelette"
                    android:scaleType="center"
                    android:contentDescription="@string/pic5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style5"
                    android:textAlignment="center"
                    android:id="@+id/txtOmelette" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level5"
                    android:textAlignment="center"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>
